# AlignAIR

./: .gitattributes  .gitignore  1M_test_predict.py  AlingAIRR_Sequence_Simulator.py  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile2  Dockerfile2_old_10062024  Dockerfile_old2  Dockerfile_old3  Guide For Ran.ipynb  LICENSE  MANIFEST.in  Misc.ipynb  Models.py  P1_P11_AlignAIRR_IGB_Analysis.ipynb  README.md  SECURITY.md  SequenceCorruptor.py  SingleBeamUnboundedTrainerMPWorker.py  TrainModel.py  Train_HeavyChain_AlignAIRR.py  Trainer.py  UnboundedTrainer.py  VDeepJ Error Analysis.ipynb  VDeepJDataPrepper.py  VDeepJDataset.py  VDeepJLayers.py  VDeepJMOracleModel.py  VDeepJModel.py  VDeepJModelExperimental.py  VDeepJUnbondedDataset.py  VDeepJ_Training_Pipeline.py  app.py  check_gpu.py  config.yaml  continue_model_run.py  (+38 more)
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  model_or_reference_request.md
.github/workflows/: benchmark-artifact.yml  ci.yml  release.yml  website.yml  wheels.yml
API/: AlignAIRRPredict.py  GenerateTrainDataset.py  MTFS_parameters.csv  ReplaceModelHeads.py  TrainModelFromScratch.py
Data/: HeavyChainDataset.py  LightChainDataset.py  datasetBase.py
IMGT_REFERENCE/: IGKV_ASC.csv  IGLV_ASC.csv
Metadata/: __init__.py
Metadata/GenerateDataConfig/: __init__.py  make_dataconfig.py
Models/: __init__.py
Models/HeavyChain/: HeavyChainAlignAIRR.py
Models/Layers/: Layers.py
Models/LightChain/: LightChainAlignAIRR.py  __init__.py
Models/Trainers/: HeavyChainTrainer.py  __init__.py
Models/Utilities/: utilities.py
PostProcessing/: __init__.py
PostProcessing/AlleleSelector/: __init__.py
PostProcessing/HeuristicMatching/: HeuristicReferenceMatcher.py
Scripts/: AlignAIRR_Predict.py  AlignAIRR_Predict_Segments_Only.py  Generate_Evaluation_Dataset.py  Generate_Train_Dataset.py  Train_HeavyChain_AlignAIRR.py  Train_LightChain_AlignAIRR.py  generate_evaluation_datasets.sh  generate_train_datasets.sh  train_alignairr_models.sh
SequenceSimulation/: __init__.py
SequenceSimulation/alleles/: allele.py
SequenceSimulation/data/: HeavyChain_DataConfig.pkl  HeavyChain_DataConfig_OGRDB.pkl  HeavyChain_P1P11_DataConfig.pkl  IGHD_TRIM_SIMILARITY_MAP.pkl  IGHJ_TRIM_SIMILARITY_MAP.pkl  IGHV_ALLELE_3_PRIME_SIMILARITY_MAP.pkl  IGHV_ALLELE_5_PRIME_SIMILARITY_MAP.pkl  IGHV_N_AMBIGUITY_CORRECTION_GRAPH.pkl  IGKJ_ALLELE_5_PRIME_SIMILARITY_MAP.pkl  IGKJ_TRIM_SIMILARITY_MAP.pkl  IGKV_ALLELE_3_PRIME_SIMILARITY_MAP.pkl  IGKV_ALLELE_5_PRIME_SIMILARITY_MAP.pkl  IGKV_N_AMBIGUITY_CORRECTION_GRAPH.pkl  IGLJ_ALLELE_5_PRIME_SIMILARITY_MAP.pkl  IGLJ_TRIM_SIMILARITY_MAP.pkl  IGLV_ALLELE_3_PRIME_SIMILARITY_MAP.pkl  IGLV_ALLELE_5_PRIME_SIMILARITY_MAP.pkl  IGLV_N_AMBIGUITY_CORRECTION_GRAPH.pkl  LightChain_KAPPA_DataConfig.pkl  LightChain_KAPPA_DataConfigV2.pkl  LightChain_LAMBDA_DataConfig.pkl  LightChain_LAMBDA_DataConfigV2.pkl
SequenceSimulation/locus/: __init__.py  locus.py
SequenceSimulation/metadata/: CorrectionDictionaryGenerator.py  __init__.py
SequenceSimulation/mutation/: config.py  mutation_model.py  s5f.py  uniform.py
SequenceSimulation/sequence/: __init__.py  heavy_chain.py  light_chain.py  np_region.py  sequence.py
SequenceSimulation/simulation/: __init__.py  heavy_chain_sequence_augmentor.py  light_chain_sequence_augmentor.py  sequence_augmentor.py  sequence_augmentor_base.py
SequenceSimulation/utilities/: AlleleNComparer.py  __init__.py  asc_utilities.py  data_config.py  data_utilities.py  file_utilities.py  misc.py  modes.py
Tests/: sequence_simulation_tests.py
Trainers/: Trainer.py
airrship/: airrship.rar  create_repertoire.py
airrship/data/: IGHD_usage.csv  IGHV_usage.csv  IGHV_usage_gene.csv  V_family_trimming_proportions.csv  imgt_human_IGHD.fasta  imgt_human_IGHD_with_OR.fasta  imgt_human_IGHV.fasta  mut_freq_per_seq_per_family.csv
benchmarks/bench_v2/: README.md  SHA256SUMS.txt  comparison_report.json  manifest.json
conda/: meta.yaml
constraints/: cibuildwheel-test.txt
data/: IGHD_usage_gene.csv
docs/: airr_fields.md  alignair_steps_brakdown.md  benchmarks.md  cli.md  design.md  dnalignair.md  doc_requirements.txt  getting_started.md  index.md  known_failure_modes.md  model_contract.md  models.md  performance.md  publishing_models.md  python_api.md  troubleshooting.md
examples/: README.md  donor_genotype.yaml  reads.fasta
examples/10x/: README.md  (+2 more)
notebooks/: 01_inference.ipynb  02_custom_reference_training.ipynb  README.md
scripts/: README.md  aligner_microbench.py  baseline_igblast.py  bench_alignair_h2h.py  bench_seed_extend.py  bench_xattn.py  big_online_benchmark.py  boundary_posterior_probe.py  build_pretrained_registry.py  calibrate_model.py  calibrate_raw_v_band.py  calibrate_sets.py  contaminant_gate_probe.py  diag_d_ambiguity.py  diag_d_window.py  diag_junction_misses.py  diag_reader_vs_coords.py  diag_weakness.py  diag_weakness2.py  diagnose_alignair.py  embargo_retrain.py  eval_airristotle.py  eval_xattn_genotype.py  exp_aligner_ablation.py  exp_band_recall_gate.py  exp_band_sweep.py  exp_banded_dp_parity.py  exp_d_window_strategy.py  exp_gate1_repeat.py  exp_head_vs_encoder.py  exp_neural_contribution_ablation.py  exp_ramp_vs_factored.py  exp_seed_extend_gate2_dryrun.py  exp_seed_extend_sanity.py  exp_throughput_breakdown.py  exp_xattn_rescore.py  headtohead.py  heldout_alleles.py  hierarchical_eval.py  novel_diagnostic.py  (+29 more)
static/: bulkPredict.js  bulk_sequence_prediction.html  index.html  script.js  style.css
stress_tests/: sequence_start_end_stress.ipynb
templates/: MainPage.html
tests/: AlignAIRR_S5F_OGRDB_DConfig_Experimental.index  TCRB_Sample_Data.csv  TestModule.py  conftest.py  debug.py  heavychain_predict_validation.csv  lightchain_predict_validation.csv  run_all_tests.py  sample_LightChain_dataset.csv  tcrb_predict_validation.csv  test_docker_cli.py  wheel_smoke.py
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
workflows/: README.md  samplesheet.csv
(+1075 files in other folders)
