[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

# ── Project metadata (PEP 621) ──────────────────────────────────────────────
[project]
name = "AlignAIR"
version = "2.0.2"
description = "Unified Multi-Chain IG/TCR Sequence Alignment Tool with Dynamic GenAIRR Integration"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Thomas Konstantinovsky", email = "thomaskon90@gmail.com" },
    { name = "Ayelet Peres" },
]
keywords = ["immunogenetics", "sequence-alignment", "bioinformatics", "AIRR", "antibody", "TCR"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# ── Core dependencies (inference only) ───────────────────────────────────────
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "GenAIRR>=0.6.0",
    "tqdm>=4.60",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "tensorflow>=2.17,<3",
    "PyYAML>=6.0",
    "biopython>=1.80",
    "psutil>=5.8",
    "joblib>=1.2",
]

# ── Optional extras ──────────────────────────────────────────────────────────
[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=10.0",
]
train = [
    "wandb>=0.15",
    "matplotlib>=3.7",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.9",
]
server = [
    "flask>=3.0",
    "requests>=2.28",
]
dev = [
    "AlignAIR[cli,train,viz,server]",
    "pytest>=7.0",
    "mkdocs>=1.5",
    "mkdocs-jupyter>=0.24",
    "build>=1.0",
    "twine>=5.0",
]
all = [
    "AlignAIR[cli,train,viz,server]",
]

# ── URLs ─────────────────────────────────────────────────────────────────────
[project.urls]
Homepage = "https://alignair.ai"
Repository = "https://github.com/MuteJester/AlignAIR"
"Bug Tracker" = "https://github.com/MuteJester/AlignAIR/issues"
Documentation = "https://github.com/MuteJester/AlignAIR#readme"

# ── Console scripts ─────────────────────────────────────────────────────────
[project.scripts]
alignair_predict = "AlignAIR.API.AlignAIRRPredict:main"

# ── Setuptools configuration ────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"AlignAIR.PretrainedComponents" = ["*.pkl"]
"AlignAIR.API" = ["*.csv"]

# ── Pytest configuration ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "regression: Regression tests",
    "performance: Performance tests",
]
