[build-system]
requires = ["setuptools>=77.0", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

# ── Project metadata (PEP 621) ──────────────────────────────────────────────
[project]
name = "AlignAIR"
version = "2.0.2"
description = "Unified Multi-Chain IG/TCR Sequence Alignment Tool with Dynamic GenAIRR Integration"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Thomas Konstantinovsky", email = "thomaskon90@gmail.com" },
    { name = "Ayelet Peres" },
]
keywords = ["immunogenetics", "sequence-alignment", "bioinformatics", "AIRR", "antibody", "TCR"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# ── Core dependencies ────────────────────────────────────────────────────────
dependencies = [
    "torch>=2.2",
    "pandas>=1.5",
    "numpy>=1.24",
    "GenAIRR>=2.2.0",
    "safetensors>=0.4",       # portable weights section of the .alignair model format
    "tqdm>=4.60",
    "scipy>=1.11",
    "PyYAML>=6.0",
    "biopython>=1.80",
    "psutil>=5.8",
    "platformdirs>=3.0",     # per-OS cache/config locations (cross-platform, honors XDG/env overrides)
]

# ── Optional extras ──────────────────────────────────────────────────────────
[project.optional-dependencies]
zstd = ["zstandard>=0.22"]    # optional stronger compression for .alignair sections (codec="zstd")
# Only needed for PRIVATE hf:// repos or resumable large downloads. file://, https://, and PUBLIC
# hf:// registries + the verified cache all work with the stdlib alone (no extra install).
hub = ["huggingface-hub>=0.20"]
cli = [
    "huggingface-hub>=0.20",
    "airr>=1.4",
    "parasail>=1.3",       # gapped alignment (exact cigars / germline_alignment / identity) + fast V reader
    "argcomplete>=3.0",    # optional shell completion (`alignair completion`)
]
# alias kept for back-compat; parasail is now part of [cli]
reader = [
    "parasail>=1.3",
]
# WFA2 wavefront aligner: fast exact germline alignment for the speed-stack inference path
# (the align/ package prefers it, falling back to parasail when absent).
wfa = [
    "pywfa>=0.5",
]
train = [
    "wandb>=0.15",
    "matplotlib>=3.7",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.9",
]
server = [
    "flask>=3.0",
    "requests>=2.28",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-jupyter>=0.24",
]
dev = [
    "AlignAIR[cli,train,viz,server]",
    "pytest>=7.0",
    "mkdocs>=1.5",
    "mkdocs-jupyter>=0.24",
    "build>=1.0",
    "twine>=5.0",
    "cibuildwheel>=2.21",  # build binary wheels (with the compiled germline-CIGAR kernel) locally
]
all = [
    "AlignAIR[cli,train,viz,server]",
]

# ── URLs ─────────────────────────────────────────────────────────────────────
[project.urls]
Homepage = "https://alignair.ai"
Repository = "https://github.com/MuteJester/AlignAIR"
"Bug Tracker" = "https://github.com/MuteJester/AlignAIR/issues"
Documentation = "https://github.com/MuteJester/AlignAIR#readme"

# ── Console scripts ─────────────────────────────────────────────────────────
[project.scripts]
alignair = "alignair.cli.main:main"

# ── Setuptools configuration ────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]
# `alignair_benchmark` is a dev/research harness (GenAIRR benchmark generation + evaluation),
# not part of the runtime product — keep it out of the installed wheel. It stays importable from a
# source checkout (PYTHONPATH=src) for development and CI.
exclude = ["alignair_benchmark*"]

# ship the Cython source so an sdist can (re)build the optional germline-CIGAR kernel
[tool.setuptools.package-data]
"alignair.predict" = ["*.pyx"]

# ── Wheel building (cibuildwheel) ───────────────────────────────────────────
# Builds binary wheels (with the compiled germline-CIGAR kernel) for Linux/macOS/Windows in CI.
# The extension is best-effort: a source install without a compiler still works via the pure-Python
# fallback, so wheels are a speed optimization, not a hard requirement.
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_* *_i686"
build-frontend = "build"
# each runner builds its native arch (macos-13 -> x86_64, macos-14 -> arm64, etc.) so the compiled
# kernel can be imported + tested in-place. Verify it actually loaded in every built wheel (the smoke
# test loads the .so directly, so it needs no heavy runtime deps like torch).
test-command = "python {project}/tests/wheel_smoke.py"

# ── Pytest configuration ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode: tests have no __init__.py, so same-basename files in different dirs
# (e.g. test_batch.py) would otherwise collide under the default prepend mode.
addopts = "--import-mode=importlib"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "regression: Regression tests",
    "performance: Performance tests",
    "slow: Slow tests (real model/reference; excluded from fast runs via -m 'not slow')",
]
